spring-ai-alibaba/spring-ai-alibaba-admin/deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-ai-admin
  labels:
    name: spring-ai-admin
